# Hacathon-2.0

phase1/: .gitignore  README.md  main.py  pyproject.toml  test_main.py
phase1/.claude/agents/: todo-spec-reviewer.md
phase1/.specify/memory/: constitution.md
phase1/.specify/scripts/bash/: create-new-feature.sh
phase1/history/prompts/001-todo-console-app/: 001-create-todo-console-app-plan.plan.prompt.md  002-generate-todo-console-app-tasks.tasks.prompt.md
phase1/history/prompts/constitution/: 1-update-multi-phase-hackathon.constitution.prompt.md
phase1/specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase1/specs/001-todo-console-app/checklists/: requirements.md
phase1/specs/001-todo-console-app/contracts/: cli-commands.md
phase1/src/: __init__.py
phase1/src/application/: __init__.py  errors.py  todo_service.py
phase1/src/cli/: __init__.py  formatter.py  main.py  parser.py
phase1/src/domain/: __init__.py  todo.py  todo_store.py
phase1/tests/: __init__.py
phase1/tests/integration/: test_cli_integration.py
phase1/tests/unit/: test_formatter.py  test_parser.py  test_todo.py  test_todo_service.py  test_todo_store.py
